Fixed screen overflow when around 1280px width

--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@ body {
 
 @media (min-width: 1280px) {
   .game-board {
-    max-width: 1400px;
+    max-width: 1270px;
   }
 }
 
